[package]
name = "shamirsecretsharing-cli"
version = "0.1.0"
authors = ["Daan Sprenkels <hello@dsprenkels.com>"]

[[bin]]
name = "secret-share-split"
path = "src/bin/split.rs"

[[bin]]
name = "secret-share-combine"
path = "src/bin/combine.rs"

[dependencies]
atty = "0.2"
env_logger = "0.5"
libc = "0.2"
log = "0.4"
rand = "0.4"
shamirsecretsharing = "0.1"

[dependencies.clap]
version = "2.25"
default-features = false
features = [ "suggestions", "color" ]

[dev-dependencies]
duct = "0.10"
