[package]
name = "shamirsecretsharing-cli"
version = "0.1.2"

[[bin]]
name = "secret-share-split"
path = "src/bin/split.rs"

[[bin]]
name = "secret-share-combine"
path = "src/bin/combine.rs"

[dependencies]
atty = "0.2"
crypto_secretbox = { version = "0.1", default-features = false, features = ["salsa20", "alloc"] }
env_logger = "0.6"
log = "0.4"
rand = "0.7"
shamirsecretsharing = "=0.1.7"

[dependencies.clap]
version = "2.25"
default-features = false
features = [ "suggestions", "color" ]

[dev-dependencies]
duct = "0.12"
